@@ -1,3 +1,11 @@
+Wed, 06 Feb 2008 17:34:56 +0100 <thp@perli.net>
+Fix the track length detection
+
+	* src/gpodder/sync.py: Fix the iPod sync track length detection code,
+	reported by Paul Rudkin <paul@thegithouse.com> and tested by
+	FriedBunny <friedbunny@kulturny.com>; make default length 3 hours
+	Closes:	http://bugs.gpodder.org/show_bug.cgi?id=29
+
 Wed, 06 Feb 2008 10:59:25 +0100 <thp@perli.net>
 NLS encoding support for MP3 player synchronization (from gdfs)
 
